--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                     <p class="card-text text-center fs-6">
                                         <strong>CO2 Emissions Savings</strong>
                                     <div style="padding-left: 2em;text-align: center;">Commitment (Kw) x
-                                        Event Hours x 0.0003231650 * Performance (assuming 100% performance)</div>
+                                        Event Hours x 0.0003231650 x Performance (assuming 100% performance)</div>
                                     </p>
                                 </div>
                             </div>
