--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                                 100 kW
                                                 of load. This program aims to bolster power grid reliability by
                                                 mandating load
-                                                curtailment during periods of high demand. Like CSRP, participants
+                                                curtailment during periods of high demand. Participants
                                                 receive a
                                                 21-hour advance notice and a 2-hour prior confirmation to the event,
                                                 which lasts
@@ -262,7 +262,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <h5 class="mt-3 mb-1 text-center fs-5">Terms</h5>
+                            <h5 class="mt-3 mb-1 text-center fs-5">Parameters</h5>
                             <div class="card">
                                 <div class="card-body bg-light">
                                     <p class="card-text text-center fs-6">
