--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                     Calculations:</div>
                                 <div class="card-body bg-light">
                                     <p class="card-text text-center fs-6">
-                                        <strong>CO2 Emissions Savings</strong>
+                                        <strong>CO<sub>2</sub> Emissions Savings</strong>
                                     <div style="padding-left: 2em;text-align: center;">Commitment (Kw) x
                                         Event Hours x 0.0003231650 x Performance (assuming 100% performance)</div>
                                     </p>
@@ -304,7 +304,7 @@
                     <div class="card-body bg-light-green">
                         <p class="card-text text-md-start" style="font-size: 1em;">
                             <strong> Revenue calculator</strong> is designed to help estimate
-                            potential gross revenue and CO2e emissions savings from participation in demand response
+                            potential gross revenue and CO<sub>2</sub> emissions savings from participation in demand response
                             programs. It accommodates three distinct programs and offers two modes:
                         <ul>
                             <li>Simplified calculator is default mode for a quick overview of maximum revenue</li>
