--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <!-- The About link -->
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#" data-bs-toggle="modal"
-                                data-bs-target="#aboutModal">About</a>
+                                data-bs-target="#aboutModal">About DEM</a>
                         </li>
                         <!-- The Demand response programs link -->
                         <li class="nav-item">
